--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@element-plus/icons-vue": "^1.1.4",
+        "bootstrap": "^5.1.3",
         "core-js": "^3.8.3",
-        "vue": "^3.2.13",
+        "element-plus": "^2.2.0",
+        "vue": "^3.2.33",
         "vuex": "^4.0.2"
     },
     "devDependencies": {
