--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "export NODE_ENV=develpoment && vue-cli-service serve --port 8081",
-        "build": "export NODE_ENV=production && vue-cli-service build",
+        "serve": "vue-cli-service serve --mode development --port 8081",
+        "build": "vue-cli-service build --mode production",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
