--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
         "core-js": "^3.8.3",
+        "dotenv": "^16.0.1",
         "element-plus": "^2.2.0",
         "vue": "^3.2.33",
         "vuex": "^4.0.2"
