--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,5 +5,8 @@
     "manifest_version": 3,
     "action": {
         "default_popup": "index.html"
+    },
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'"
     }
 }
