--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,5 +8,8 @@
     },
     "content_security_policy": {
         "extension_pages": "script-src 'self'; object-src 'self'"
-    }
+    },
+    "host_permissions": [
+        "https://diablo2.io/*"
+    ]
 }
